--- a/Diamond Reserve/Base.lproj/Main.storyboard
+++ b/Diamond Reserve/Base.lproj/Main.storyboard
@@ -1765,10 +1765,10 @@ TO SEE IF YOU QUALIFY </string>
                                                 <fontDescription key="fontDescription" name="UnicaOne-Regular" family="Unica One" pointSize="12"/>
                                                 <inset key="titleEdgeInsets" minX="-30" minY="40" maxX="0.0" maxY="0.0"/>
                                                 <inset key="imageEdgeInsets" minX="22" minY="-14" maxX="0.0" maxY="0.0"/>
-                                                <state key="normal" title="FILTER" image="search_unselected">
+                                                <state key="normal" title="FILTER" image="filter_unselect.png">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="0.431640625" colorSpace="calibratedRGB"/>
                                                 </state>
-                                                <state key="selected" image="search.png">
+                                                <state key="selected" image="filter.png">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
                                                 <connections>
@@ -6505,6 +6505,8 @@ Now On Tap!</string>
         <image name="down_arrow.png" width="16" height="9"/>
         <image name="emerald_normal" width="19" height="25"/>
         <image name="emerald_selected" width="18" height="24"/>
+        <image name="filter.png" width="22" height="25"/>
+        <image name="filter_unselect.png" width="22" height="25"/>
         <image name="final_logo" width="489" height="57"/>
         <image name="gem_unselected" width="32" height="33"/>
         <image name="gems.png" width="32" height="33"/>
@@ -6536,8 +6538,6 @@ Now On Tap!</string>
         <image name="round_normal" width="22" height="23"/>
         <image name="round_normal.png" width="22" height="23"/>
         <image name="round_selected" width="22" height="23"/>
-        <image name="search.png" width="31" height="31"/>
-        <image name="search_unselected" width="31" height="31"/>
         <image name="strip1.png" width="375" height="425"/>
         <image name="up_arrow.png" width="40" height="40"/>
         <image name="white-camera.png" width="26" height="20"/>
